test_inputs/bad/invalid_override_2.lat
class A {
    A make() {
        return new A;
    }
}

class B extends A {
    B make() {
        return new B;
    }
}

int main() {
    return 0;
}
